# persisto-smaas-python-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_profiles.py  test_sdk.py
backend/: .gitignore  db.py  main.py  memory_service.py
backend/routers/: memory.py
backend/services/: db_service.py  embed_service.py  embedder.py  memory_service.py  openai_embedder.py
backend/utils/: auth.py  chunker.py  retrieval_profiles.py
persisto/: __init__.py  client.py  errors.py
sdk/python/: setup.py
sdk/python/persisto/: __init__.py  client.py  models.py
tests/: test_profiles.py  test_sdk.py
